# rocos-soem

./: .gitignore  CMakeLists.txt  README.md
include/: ver.h.in
include/rocos_soem/: ecat_config.h  ecat_config_master.h  ecat_type.h
src/: ecat_config.cpp  ecat_config_master.cpp  ecat_flags.cpp  ecat_flags.h  ecat_process.cpp  ecat_process.h  main.cpp
test/: unit_test.cpp
